# neural_image

./: CMakeLists.txt  README.md
src/: main.cpp  network.cpp  network.hpp
